# lightwave

./: .gitignore
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---feature-request.md  ---support-question.md  support-question.md
vmdir/: configure.ac
vmdir/client/: ldaputil.c  prototypes.h
vmdir/common/: util.c
vmdir/config/: vmdir-rest.json
vmdir/include/: vmdircommon.h
vmdir/server/: Makefile.am
vmdir/server/common/: vmdirentry.c  vmdirtoldaperror.c
vmdir/server/include/: resthead.h  srvcommon.h
vmdir/server/ldap-head/: modify.c  result.c  search.c
vmdir/server/middle-layer/: add.c  delete.c  modify.c  search.c
vmdir/server/rest-head/: Makefile.am  auth.c  decode.c  defines.h  encode.c  includes.h  jsonbuild.c  jsonparse.c  ldapapi.c  libmain.c  operation.c  param.c  params.c  prototypes.h  result.c  structs.h
vmdir/server/schema/: api.c
vmdir/server/vmdir/: Makefile.am  includes.h  main.c
vmdir/server/vmdir/rest/: api.c  auth.c  defines.h  helpers.c  http.c  prototypes.h  replication.c  request.c  response.c  structs.h  utils.c
